Cards alignment bug fixed

--- a/dribbble/src/Pages/Profile/Styles/LikedPosts.module.css
+++ b/dribbble/src/Pages/Profile/Styles/LikedPosts.module.css
@@ -5,7 +5,7 @@
 .likedFeedContainer{    
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    margin: 0px;
+    margin: 0px 20px;
     padding: 40px 0px;
     gap: 20px;
     padding: 0px 32px;
