--- a/dribbble/src/Pages/Profile/Styles/ProfileStyles.css
+++ b/dribbble/src/Pages/Profile/Styles/ProfileStyles.css
@@ -1,4 +1,4 @@
-.profile-container{
+.profile-main-container{
     padding: 60px 32px 28px 32px;
     display: flex;
     flex-wrap: wrap;
